<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.eclipse.paho.mqttspy</groupId>
	<artifactId>spy-common-ui</artifactId>
	<version>1.0.1</version>

	<name>spy-common-ui</name>
	<url>https://github.com/eclipse/paho.mqtt-spy</url>
	
	<scm>
		<connection>scm:git:../.git</connection>
		<url>../.git</url>
	</scm>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.build.number>${buildNumber}</project.build.number>

		<timestamp>${maven.build.timestamp}</timestamp>
		<maven.build.timestamp.format>yyyy</maven.build.timestamp.format>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		
		<jaxb.version>2.3.0</jaxb.version>
		<jaxb.runtime.version>2.3.0</jaxb.runtime.version>
		<jaxb2.plugin.version>0.12.1</jaxb2.plugin.version>
		<jaxb2.basics.version>0.11.1</jaxb2.basics.version>
		<javafx.version>21.0.3</javafx.version>
		<javafx.platform>${os.detected.name}</javafx.platform>
	</properties>
	
	<repositories>
		<repository>
			<id>gillius-org</id>
			<name>Gillius.org Maven Repository</name>
			<url>http://www.gillius.org/maven2</url>
		</repository>
	</repositories>

	<dependencies>

		<!--=== mqtt-spy === -->
		
		<dependency>
			<groupId>org.eclipse.paho.mqttspy</groupId>
			<artifactId>spy-common</artifactId>
			<version>1.0.1</version>
		</dependency>	
		
		<!--=== Other === -->
				
		<dependency>
			<groupId>org.fxmisc.richtext</groupId>
			<artifactId>richtextfx</artifactId>
			<version>0.8.2</version>
		</dependency>

		<dependency>
			<groupId>org.gillius</groupId>
			<artifactId>jfxutils</artifactId>
			<version>1.0</version>
		</dependency>

		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-base</artifactId>
			<version>${javafx.version}</version>
			<classifier>${javafx.platform}</classifier>
		</dependency>

		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-graphics</artifactId>
			<version>${javafx.version}</version>
			<classifier>${javafx.platform}</classifier>
		</dependency>

		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>${javafx.version}</version>
			<classifier>${javafx.platform}</classifier>
		</dependency>

		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>${javafx.version}</version>
			<classifier>${javafx.platform}</classifier>
		</dependency>

		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-swing</artifactId>
			<version>${javafx.version}</version>
			<classifier>${javafx.platform}</classifier>
		</dependency>
		
		<!--=== TEST === -->
	
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
			<scope>test</scope>
		</dependency>
		
	</dependencies>
  
	<build>

		<extensions>
			<extension>
				<groupId>kr.motd.maven</groupId>
				<artifactId>os-maven-plugin</artifactId>
				<version>1.7.0</version>
			</extension>
		</extensions>

		<plugins>
		
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>properties-maven-plugin</artifactId>
				<version>1.1.0</version>
				<executions>
					<execution>
						<phase>initialize</phase>
						<goals>
							<goal>set-system-properties</goal>
						</goals>
						<configuration>
							<properties>
								<property>
									<name>com.sun.xml.bind.v2.bytecode.ClassTailor.noOptimize</name>
									<value>true</value>
								</property>
							</properties>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.10.1</version>
				<configuration>
					<source>11</source>
					<target>11</target>
					<compilerArgs>
						<arg>--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED</arg>
						<arg>--add-exports=javafx.controls/com.sun.javafx.scene.control.skin=ALL-UNNAMED</arg>
					</compilerArgs>
				</configuration>
			</plugin>

			<!-- Generate JAXB clases -->			
	        <plugin>
	            <groupId>org.jvnet.jaxb2_commons</groupId>
	            <artifactId>jaxb2-basics</artifactId>
	            <version>${jaxb2.basics.version}</version>
	        </plugin>        	
			<plugin>
			    <groupId>org.jvnet.jaxb2.maven2</groupId>
			    <artifactId>maven-jaxb2-plugin</artifactId>
			    <version>${jaxb2.plugin.version}</version>
			    <executions>
			        
			        <execution>
			            <id>versions</id>
			            <phase>generate-resources</phase>
			            <goals>
			                <goal>generate</goal>
			            </goals>
			            <configuration>
			            	<locale>en</locale>
			                <schemaDirectory>src/main/resources/</schemaDirectory>
			                <schemaIncludes>
			                    <include>spy-versions.xsd</include>
			                </schemaIncludes>			                 
			                <generateDirectory>src/main/java/</generateDirectory>			                
			                <generatePackage>pl.baczkowicz.spy.ui.generated.versions</generatePackage>
			                <removeOldOutput>false</removeOldOutput>
			                <args>			                
						        <arg>-XtoString</arg>
						        <arg>-Xequals</arg>
						        <arg>-XhashCode</arg>						        
                    			<arg>-Xcopyable</arg>					    
			                </args>						 
			                <plugins>
								<plugin>
									<groupId>org.jvnet.jaxb2_commons</groupId>
									<artifactId>jaxb2-basics</artifactId>
									<version>${jaxb2.basics.version}</version>
								</plugin>
							</plugins>
			            </configuration>			            			          
			        </execution>
			        
			    </executions>	
			    <dependencies>
	    			<dependency>
						<groupId>org.jvnet.jaxb2_commons</groupId>
						<artifactId>jaxb2-value-constructor</artifactId>
						<version>3.0</version>
					</dependency>
	    			<dependency>
						<groupId>javax.xml.bind</groupId>
						<artifactId>jaxb-api</artifactId>
						<version>${jaxb.version}</version>
					</dependency>
	    			<dependency>
						<groupId>com.sun.activation</groupId>
						<artifactId>javax.activation</artifactId>
						<version>1.2.0</version>
					</dependency>
	    			<dependency>
						<groupId>com.sun.xml.bind</groupId>
						<artifactId>jaxb-impl</artifactId>
						<version>${jaxb.runtime.version}</version>
					</dependency>
	    			<dependency>
						<groupId>com.sun.xml.bind</groupId>
						<artifactId>jaxb-core</artifactId>
						<version>${jaxb.runtime.version}</version>
					</dependency>
	    			<dependency>
						<groupId>com.sun.xml.bind</groupId>
						<artifactId>jaxb-xjc</artifactId>
						<version>${jaxb.runtime.version}</version>
					</dependency>
			    </dependencies>	    		    
			</plugin> 
			
			<plugin>
	           <groupId>com.google.code.maven-replacer-plugin</groupId>
	           <artifactId>replacer</artifactId>
	           <version>1.5.3</version>	          
	           <executions>
	               <execution>
	               		<id>replace</id>
	                   <phase>prepare-package</phase>
	                   <goals>
	                       <goal>replace</goal>
	                   </goals>        	                             
	               </execution>
	           </executions>
	           <configuration>
	           		<basedir>${basedir}/src/main/java</basedir>
                    <includes>
						<include>pl/baczkowicz/spy/generated/versions/**/*.java</include>
                    </includes>
                    <replacements>   
                        <replacement>
                            <token>//${line.separator}// This file was generated by the JavaTM</token>
                            <value>//
// Copyright (c) ${maven.build.timestamp} Kamil Baczkowicz
//
// CSOFF: a.*
// This file was generated by the JavaTM</value>
                        </replacement>
                        <replacement>
                            <token>^ \*/</token>
                            <value> */
@SuppressWarnings("all")</value>
                        </replacement>                                        
                        <replacement>
                            <token>^// Generated on.*$</token>
                            <value>// Timestamp removed by maven-replacer-plugin to avoid detecting changes - see the project POM for details</value>
                        </replacement>
                    </replacements>
                    <regex>true</regex>
                    <quiet>false</quiet>
                    <regexFlags>
                        <regexFlag>MULTILINE</regexFlag>
                    </regexFlags>
                </configuration>
            </plugin>
			 
		</plugins>
		
	</build>
</project>
